--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     $.ajax({
       url : "http://kort.asiaq.gl/geoserver/asiaq/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=asiaq:godthaab_icebergs_vector&maxFeatures=50&outputFormat=application%2Fjson",
-      dataType : 'jsonp',
+      dataType : 'json',
       jsonpCallback: 'getJson',
       success: handleJson
     });
