--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>GID WebMap</title>
   <link rel="stylesheet" href="leaflet-1.6.0/leaflet.css"/>
   <script src="leaflet-1.6.0/leaflet.js"></script>
-  <script src="code.jquery.com/jquery-2.1.3.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   <style>
     #map{ width: 100%; height: 100%; }
   </style>
