--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 <head>
   <title>GID WebMap</title>
-  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   <link rel="stylesheet" href="leaflet-1.6.0/leaflet.css"/>
   <script src="leaflet-1.6.0/leaflet.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   <style>
     #map{ width: 100%; height: 100%; }
   </style>
@@ -28,28 +28,38 @@
     }).addTo(map);
 
     // Sentinel-1 tiff
-  L.tileLayer.wms('http://kort.asiaq.gl/geoserver/asiaq_gid/wms', {
-        layers: 'asiaq_gid:godthaab_iceberg_detection',
-        format: 'image/png',
-        transparent: true,
-        attribution: "Godthaab Iceberg Detection"
-      }).addTo(map);
+  var radarimage = L.tileLayer.wms('http://kort.asiaq.gl/geoserver/asiaq_gid/wms', {
+                      layers: 'asiaq_gid:godthaab_iceberg_detection',
+                      format: 'image/png',
+                      transparent: true,
+                      attribution: "Godthaab Iceberg Detection"
+                    }).addTo(map);
 
-  // GeoJSON layers
-  var geojsonLayer = new L.GeoJSON();
+    // GeoJSON layers
+    var geojsonLayer = new L.GeoJSON();
 
-  function handleJson(data) {
-    console.log(data)
-    geojsonLayer.addData(data);
-  }
+    function handleJson(data) {
+      console.log(data)
+      geojsonLayer.addData(data);
+    }
 
-  $.ajax({
-    url : "http://kort.asiaq.gl/geoserver/asiaq/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=asiaq:godthaab_icebergs_vector&maxFeatures=50&outputFormat=application%2Fjson",
-    dataType : 'json',
-    jsonpCallback: 'getJson',
-    success: handleJson
-  });  
-  
+    $.ajax({
+      url : "http://kort.asiaq.gl/geoserver/asiaq/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=asiaq:godthaab_icebergs_vector&maxFeatures=50&outputFormat=application%2Fjson",
+      dataType : 'json',
+      jsonpCallback: 'getJson',
+      success: handleJson
+    });
+
+    var basemap = {
+
+          };
+
+    var overlay = {
+    "RadarImage": radarimage
+      };
+
+    L.control.layers(basemap, overlay).addTo(map);
+
   </script>
 </body>
 </html>
