--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           };
 
     var overlay = {
-    "Radar Image": radarimage,
-    "Iceberg Vector": outline_vector
+      "Iceberg Vector": outline_vector,
+      "Radar Image": radarimage
       };
 
     L.control.layers(basemap, overlay).addTo(map);
