--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           };
 
     var overlay = {
-      "Iceberg Vector": outline_vector,
-      "Radar Image": radarimage
+      "Radar Image": radarimage,
+      "Iceberg Vector": outline_vector
       };
 
     L.control.layers(basemap, overlay).addTo(map);
