--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script type="text/javascript" src="timedimension-1.1.1/leaflet.timedimension.layer.geojson.js"></script>
   <script type="text/javascript" src="timedimension-1.1.1/leaflet.timedimension.player.js"></script>
   <script type="text/javascript" src="timedimension-1.1.1/leaflet.timedimension.control.js"></script>
+  <script src="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js" type="text/javascript"></script>
   <script type="text/javascript">
 
 
