--- a/index.html
+++ b/index.html
@@ -30,26 +30,8 @@
   <script type="text/javascript" src="timedimension-1.1.1/leaflet.timedimension.layer.geojson.js"></script>
   <script type="text/javascript" src="timedimension-1.1.1/leaflet.timedimension.player.js"></script>
   <script type="text/javascript" src="timedimension-1.1.1/leaflet.timedimension.control.js"></script>
+
   <script type="text/javascript">
-
-
-  /////// Current Github script //////////
-  // initialize the map
-  // var map = L.map('map').setView([64.4, -51.09], 9);
-
-  // var map = L.map('map', {
-  //   zoom: 9,
-  //   center: [64.4, -51.09],
-  //   timeDimension: true,
-  //   timeDimensionOptions: {
-  //       timeInterval: "2019-11-01/2020-01-10"
-  //   },
-  //   timeDimensionControl: true,
-  // });
-
-  // var startDate = new Date();
-  // startDate.setUTCHours(startDate.getUTCHours() - 1460);
-  // startDate.setUTCHours(0, 0, 0, 0);
 
   var map = L.map('map', {
       zoom: 9,
@@ -86,69 +68,30 @@
                       attribution: "Godthaab Iceberg Detection"
                     })//.addTo(map);
 
-  // var radarTimeLayer = L.timeDimension.layer.tileLayer.portus(radarimage, {});
-
   // GeoJSON layer
   var outline_vector = L.tileLayer.wms('http://kort.asiaq.gl/geoserver/asiaq/wms?', {
                       layers: 'asiaq_gid:godthaab_icebergs_vector',
                       format: 'image/png',
                       transparent: true,
                       attribution: "Godthaab Iceberg Detection"
-                    }).addTo(map);
+                    })//.addTo(map);
 
-  // var vectorTimeLayer = L.timeDimension.layer.tileLayer.portus(outline_vector, {});
 
-    var basemap = {
-          };
 
-    var overlay = {
-    "Iceberg Vector": outline_vector,
-    "Radar Image": radarimage
+  // Create and add a TimeDimension Layer to the map
+  var radarTdLayer = L.timeDimension.layer.wms(radarimage);
+  radarTdLayer.addTo(map);
 
-      };
 
-    L.control.layers(basemap, overlay).addTo(map);
+  var basemap = {
+        };
 
-    // Create and add a TimeDimension Layer to the map
+  var overlay = {
+  "Iceberg Vector": outline_vector,
+  "Radar Image": radarTdLayer
+    };
 
-    var tdWmsLayer = L.timeDimension.layer.wms(radarimage);
-    tdWmsLayer.addTo(map);
-
-    ////////////////////
-    // Connect to WFS (jsonp required)
-    // var owsrootUrl = 'http://kort.asiaq.gl/geoserver/asiaq/ows';
-    //
-    // var defaultParameters = {
-    //     service : 'WFS',
-    //     version : '1.0.0',
-    //     request : 'GetFeature',
-    //     typeName : 'asiaq:godthaab_icebergs_vector',
-    //     outputFormat: 'text/javascript'
-    // 	//,	srsName:"EPSG:4326"
-    //     };
-    //
-    // var parameters = L.Util.extend(defaultParameters);
-    //
-    // var URL = owsrootUrl + L.Util.getParamString(parameters);
-    //
-    // var ajax = $.ajax({
-    //     url : URL,
-    //     dataType : 'jsonp',
-    //     jsonpCallback : 'parseResponse',
-    //     success : WFSLayer
-    // });
-    //
-    // function WFSLayer(data) {
-    //
-    // var fuffi= L.geoJson(data, {
-    // style: function (feature) {
-    //     return {color: 'black',
-    //         fillColor: '#ff0000',
-    //         fillOpacity: 0.10};
-    //     }
-    // }).addTo(map);
-    // };
-    ////////////////////
+  L.control.layers(basemap, overlay).addTo(map);
 
   </script>
 </body>
